# 2025-tfg-diego-lopez

./: README.md
docs/: _config.yaml  _config.yml
docs/_posts/: 2025-11-05-week1.md  2025-11-12-week2.md  2025-11-19-week3.md  2025-11-19-weeks4-5.md  2025-11-5-week1.md  2025-12-03-weeks4-5.md  2025-12-10-week6.md  2026-01-21-January.md  2026-02-04-weeks13-14.md  2026-02-26-weeks16-17.md  2026-02-26-weeks18-19.md  2026-02-26-weeks20-22.md  2026-02-26-weeks23-28.md  2026-05-28-weeks29-30.md  2026-06-10-week31.md  2026-06-26-week32.md  2026-07-02-week33.md  2026-07-16-weeks34-35.md
g1_locomotion/: CMakeLists.txt  package.xml
g1_locomotion/include/g1_locomotion/: Inference.hpp
g1_locomotion/launch/: g1_locomotion.launch.py
g1_locomotion/policies/: walk.onnx
g1_locomotion/src/: g1_locomotion_main.cpp
g1_locomotion/src/g1_locomotion/: Inference.cpp
g1_sim/: CMakeLists.txt  package.xml  setup.py
g1_sim/bridges/: g1_pos_bridge.yaml  g1_vel_bridge.yaml
g1_sim/g1_sim/: sim_core.py
g1_sim/launch/: launch_g1_sim.launch.py
g1_sim/models/g1_29dof/: model.sdf
pruebas/: incluir_robots.ipynb  inicio_mujoco.ipynb
pruebas/G1/: control.ipynb  incluir_robots.ipynb  walk_fixed.ipynb
robots/go2_description/: CMakeLists.txt  package.xml
robots/go2_description/launch/: check_joint.rviz  gazebo.launch.py  rviz.launch.py
robots/h1_description/: CMakeLists.txt  package.xml
robots/h1_description/launch/: check_joint.rviz  gazebo.launch.py  rviz2.launch.py
