cmake_minimum_required(VERSION 3.5)
project(h1_description)

find_package(ament_cmake REQUIRED)

foreach(dir doc launch meshes mjcf urdf)
  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${dir}")
    install(DIRECTORY ${dir}/
            DESTINATION share/${PROJECT_NAME}/${dir})
  endif()
endforeach()

ament_package()
