<?xml version="1.0"?>
<package format="3">
  <name>h1_description</name>
  <version>1.0.0</version>
  <description>The Unitree H1 Description Package</description>

  <maintainer email="TODO@email.com" />
  <license>TODO</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <!-- Export (architecture independent) -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>